Fix responsive layout issues in work page

--- a/app/components/work.css
+++ b/app/components/work.css
@@ -33,7 +33,7 @@
 
 .wrapper {
   display: inline-block;
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 
 .wrapper img {
@@ -83,4 +83,17 @@
 
 div.wrapper:hover .textContent {
   opacity: 1;
+}
+
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    max-width: 375px;
+    margin: 20px auto;
+    padding: 0 15px;
+  }
+
+  .wrapper img {
+    vertical-align: top;
+    width: 100%;
+  }
 }
